--- a/client/templates/footer.html
+++ b/client/templates/footer.html
@@ -1,3 +1,3 @@
 <template name="footer">
-  <p>&copy; Chatastic 2012</p>
+<p><a data-toggle="modal" href="#aboutDialog">about</a> | <a data-toggle="modal" href="#privacyDialog">privacy</a> | <a data-toggle="modal" href="#tosDialog">tos</a> | <a data-toggle="modal" href="#contactUsDialog">contact us</a> | &copy; <a href="http://apps.facebook.com/chatastic">Chatastic 2012</a></p>
 </template>
